--- a/tarefa07/style.css
+++ b/tarefa07/style.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -8,7 +7,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    overflow-x: hidden;
+
 }
 
 header {
@@ -17,6 +16,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    height: 100px;
     padding: 10px 0px;
 }
 
@@ -29,18 +29,19 @@ ul {
     gap: 20px;
 
 }
-ul li{
+
+ul li {
     padding: 5px;
 }
-main {}
 
-footer {}
+main {}
 
 section {
     width: 100vw;
     height: 100vh;
     min-height: 100%;
-    overflow: hidden;
-    padding-top: 80px;
+
+    padding-top: 120px;
     flex-direction: row;
 }
+footer {}
