--- a/tarefa07/style.css
+++ b/tarefa07/style.css
@@ -11,13 +11,17 @@ body {
 }
 
 header {
-    background-color: #bababa;
+    background-color: #dadada30;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100px;
     padding: 10px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
 }
 
 .logo {
