--- a/tarefa07/style.css
+++ b/tarefa07/style.css
@@ -25,8 +25,8 @@ header {
 }
 
 .logo {
-    height: 100%;
-    width: 60px;
+    height: 60px;
+    width: 80px;
     position: relative;
     text-align: center;
 }
