--- a/tarefa07/style.css
+++ b/tarefa07/style.css
@@ -50,7 +50,16 @@ ul {
 ul li {
     padding: 5px;
 }
-
+a{
+    color: white;
+    text-decoration: none;
+}
+a:hover{
+    
+    border:2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+}
 main {
     width: 100%;
     height: auto;
