--- a/tarefa07/style.css
+++ b/tarefa07/style.css
@@ -56,6 +56,8 @@ a {
     color: white;
     text-decoration: none;
     padding: 15px;
+    border:2px solid transparent;
+    border-radius: 10px;
 }
     
     a:hover {
@@ -63,7 +65,7 @@ a {
         border: 2px solid white;
         padding: 15px;
         border-radius: 10px;
-        transition: 1s;
+        transition: 0.5s;
 }
 
 main {
