Adicionando animações complexas

--- a/tarefa07/style.css
+++ b/tarefa07/style.css
@@ -52,20 +52,43 @@ ul li {
     padding: 5px;
 }
 
+ul li:hover {
+    animation: cubo 1s;
+}
+
+@keyframes cubo {
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(5deg);
+    }
+    50% {
+        transform: rotate(0deg);
+    }
+    75% {
+        transform: rotate(-5deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
 a {
     color: white;
     text-decoration: none;
     padding: 15px;
-    border:2px solid transparent;
+    border: 2px solid transparent;
     border-radius: 10px;
+
 }
-    
-    a:hover {
-        
-        border: 2px solid white;
-        padding: 15px;
-        border-radius: 10px;
-        transition: 0.5s;
+
+a:hover {
+    border: 2px solid white;
+    padding: 15px;
+    border-radius: 10px;
+    transition: 0.5s;
+
 }
 
 main {
