--- a/tarefa07/style.css
+++ b/tarefa07/style.css
@@ -121,5 +121,6 @@ footer {
     background-color: #1b2074;
     color: white;
     display:flex;
-    
+    width: 100%;
+    justify-content: space-between;
 }
