--- a/tarefa07/style.css
+++ b/tarefa07/style.css
@@ -41,6 +41,7 @@ header {
     height: 90%;
     width: 90%;
     position: absolute;
+    border-radius: 10px;
 }
 
 ul {
@@ -68,7 +69,7 @@ ul li:hover {
     }
 
     25% {
-        transform: rotate(5deg);
+        transform: rotate(5deg)
     }
 
     50% {
