--- a/atividade08/style.css
+++ b/atividade08/style.css
@@ -1,50 +1,44 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+
+
+body {
+    height: 90vh;
+    width: 90vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .teste {
     width: 190px;
     height: 190px;
-    border: 1px solid red;
-    background-color: red;
-    border-radius: 10px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin: auto;
     text-align: center;
-    position: relative;
-    padding: 10px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.teste:hover {
+    width: 190px;
+    height: 190px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    background-color: red;
+    font-size: 25px;
     color: white;
-}
-
-div.teste:hover {
-    animation: giro 0.5s;
-}
-
-@keyframes giro {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    25% {
-        transform: rotate(360deg);
-    }
-
-    50% {
-        transform: rotate(0deg);
-    }
-
-    75% {
-        transform: rotate(360deg);
-    }
-
-   100% {
-        transform: rotate(0deg);
-    }
-
-
-
-
-
+    font-weight: bold;
+    transition: 1s;
+    transform: rotate(360deg);
 }
