--- a/tarefa09/style.css
+++ b/tarefa09/style.css
@@ -13,24 +13,30 @@
     }
 
     div {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        border: 1px solid;
+        width: 200px;
+        height: 200px;
+    }
+
+    .content {
+        width: 80%;
+        height: 350px;
         display: inline-block;
         border: 1px solid;
         display: flex;
         align-items: center;
-        justify-content: center;
-        margin: 90px;
+        justify-content: space-evenly;
         background-color: white;
         border-radius: 10px;
         padding: 10px;
     }
 
-    .content {
-        padding: 10px;
-    }
-
     .texto {
-        width: 100px;
-        height: 100px;
+        /* width: 100px;
+        height: 100px; */
         border-radius: 0;
         background-color: gray;
         color: gray;
@@ -47,8 +53,8 @@
     }
 
     .quadrado {
-        height: 100px;
-        width: 100px;
+        /* height: 100px;
+        width: 100px; */
         border-radius: 0;
         transition: 1s;
     }
@@ -64,13 +70,15 @@
     }
 
     .circulo {
-        height: 100px;
-        width: 100px;
+        /* height: 100px;
+        width: 100px; */
         border-radius: 0;
         transition: 1s;
     }
-    .circulo:hover{
-        border-radius: 60px;
-        background-image: linear-gradient( to top right,purple,white,blue);
-    transition: 1s;
+
+    .circulo:hover {
+        /* border-radius: 60px; */
+        border-radius: 50%;
+        background-image: linear-gradient(to top right, purple, white, blue);
+        transition: 1s;
     }
