--- a/tarefa09/style.css
+++ b/tarefa09/style.css
@@ -24,7 +24,7 @@
     .content {
         width: 80%;
         height: 350px;
-        display: inline-block;
+        /* display: inline-block; */
         border: 1px solid;
         display: flex;
         align-items: center;
